<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myplaces.ui.HomeActivity">
    <item
        android:id="@+id/first_setting"
        android:orderInCategory="1"
        android:title="@string/first_element"
        android:icon="@drawable/baseline_map_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/third_setting"
        android:orderInCategory="3"
        android:title="@string/third_element"
        android:icon="@drawable/baseline_format_list_bulleted_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fourth_setting"
        android:orderInCategory="4"
        android:title="@string/fourth_element"
        android:icon="@drawable/baseline_info_white_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/fifth_setting"
        android:orderInCategory="5"
        android:title="@string/fifth_element"
        android:icon="@drawable/outline_logout_white_24dp"
        app:showAsAction="never" />
</menu>