<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myplaces.ui.HomeActivity">
    <item
        android:id="@+id/second_setting"
        android:orderInCategory="1"
        android:title="@string/second_element"
        android:icon="@drawable/baseline_add_circle_outline_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fourth_setting"
        android:orderInCategory="2"
        android:title="@string/fourth_element"
        android:icon="@drawable/baseline_info_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fifth_setting"
        android:orderInCategory="5"
        android:title="@string/fifth_element"
        android:icon="@drawable/outline_logout_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
